--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,7 +9,16 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Test automtion regression suite</th></tr>
+<tr><td><a href="#t0">Test - Chrome</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">26,297</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Test - FF</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">52,170</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">78,467</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test automtion regression suite</th></tr></tbody></table>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test automtion regression suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test - Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.mydemo.SauceTestUpdated</td><td><a href="#m0">checkAddToCartButtonTest</a></td><td rowspan="1">1622566585018</td><td rowspan="1">2535</td></tr><tr class="passedeven"><td><a href="#m1">checkInventoryItemTest</a></td><td rowspan="1">1622566573781</td><td rowspan="1">2252</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Test - FF &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.mydemo.SauceTestUpdated</td><td><a href="#m2">checkAddToCartButtonTest</a></td><td rowspan="1">1622566609165</td><td rowspan="1">3634</td></tr><tr class="passedeven"><td><a href="#m3">checkInventoryItemTest</a></td><td rowspan="1">1622566583699</td><td rowspan="1">7375</td></tr></tbody>
+</table>
+<h2>Test - Chrome</h2><h3 id="m0">com.mydemo.SauceTestUpdated#checkAddToCartButtonTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.mydemo.SauceTestUpdated#checkInventoryItemTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test - FF</h2><h3 id="m2">com.mydemo.SauceTestUpdated#checkAddToCartButtonTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.mydemo.SauceTestUpdated#checkInventoryItemTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
