--- a/test-output/index.html
+++ b/test-output/index.html
@@ -34,10 +34,140 @@
           </img> <!-- collapse-all-icon -->
         </a> <!-- collapse-all-link -->
       </div> <!-- navigator-suite-header -->
+      <div class="suite">
+        <div class="rounded-window">
+          <div class="suite-header light-rounded-window-top">
+            <a href="#" panel-name="suite-Test_automtion_regression_suite" class="navigator-link">
+              <span class="suite-name border-passed">Test automtion regression suite</span>
+            </a> <!-- navigator-link -->
+          </div> <!-- suite-header light-rounded-window-top -->
+          <div class="navigator-suite-content">
+            <div class="suite-section-title">
+              <span>Info</span>
+            </div> <!-- suite-section-title -->
+            <div class="suite-section-content">
+              <ul>
+                <li>
+                  <a href="#" panel-name="test-xml-Test_automtion_regression_suite" class="navigator-link ">
+                    <span>C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo\src\test\resources\testrunners\testng_runnerBrowserStack.xml</span>
+                  </a> <!-- navigator-link  -->
+                </li>
+                <li>
+                  <a href="#" panel-name="testlist-Test_automtion_regression_suite" class="navigator-link ">
+                    <span class="test-stats">2 tests</span>
+                  </a> <!-- navigator-link  -->
+                </li>
+                <li>
+                  <a href="#" panel-name="group-Test_automtion_regression_suite" class="navigator-link ">
+                    <span>0 groups</span>
+                  </a> <!-- navigator-link  -->
+                </li>
+                <li>
+                  <a href="#" panel-name="times-Test_automtion_regression_suite" class="navigator-link ">
+                    <span>Times</span>
+                  </a> <!-- navigator-link  -->
+                </li>
+                <li>
+                  <a href="#" panel-name="reporter-Test_automtion_regression_suite" class="navigator-link ">
+                    <span>Reporter output</span>
+                  </a> <!-- navigator-link  -->
+                </li>
+                <li>
+                  <a href="#" panel-name="ignored-methods-Test_automtion_regression_suite" class="navigator-link ">
+                    <span>Ignored methods</span>
+                  </a> <!-- navigator-link  -->
+                </li>
+                <li>
+                  <a href="#" panel-name="chronological-Test_automtion_regression_suite" class="navigator-link ">
+                    <span>Chronological view</span>
+                  </a> <!-- navigator-link  -->
+                </li>
+              </ul>
+            </div> <!-- suite-section-content -->
+            <div class="result-section">
+              <div class="suite-section-title">
+                <span>Results</span>
+              </div> <!-- suite-section-title -->
+              <div class="suite-section-content">
+                <ul>
+                  <li>
+                    <span class="method-stats">4 methods,   4 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Test_automtion_regression_suite" class="hide-methods passed suite-Test_automtion_regression_suite"> (hide)</a> <!-- hide-methods passed suite-Test_automtion_regression_suite -->
+                      <a href="#" panel-name="suite-Test_automtion_regression_suite" class="show-methods passed suite-Test_automtion_regression_suite"> (show)</a> <!-- show-methods passed suite-Test_automtion_regression_suite -->
+                    </span>
+                    <div class="method-list-content passed suite-Test_automtion_regression_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Test_automtion_regression_suite" title="com.mydemo.SauceTestUpdated" class="method navigator-link" hash-for-method="checkAddToCartButtonTest">checkAddToCartButtonTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Test_automtion_regression_suite" title="com.mydemo.SauceTestUpdated" class="method navigator-link" hash-for-method="checkAddToCartButtonTest">checkAddToCartButtonTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Test_automtion_regression_suite" title="com.mydemo.SauceTestUpdated" class="method navigator-link" hash-for-method="checkInventoryItemTest">checkInventoryItemTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Test_automtion_regression_suite" title="com.mydemo.SauceTestUpdated" class="method navigator-link" hash-for-method="checkInventoryItemTest">checkInventoryItemTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Test_automtion_regression_suite -->
+                  </li>
+                </ul>
+              </div> <!-- suite-section-content -->
+            </div> <!-- result-section -->
+          </div> <!-- navigator-suite-content -->
+        </div> <!-- rounded-window -->
+      </div> <!-- suite -->
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Test_automtion_regression_suite" class="panel Test_automtion_regression_suite">
+          <div class="suite-Test_automtion_regression_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.mydemo.SauceTestUpdated</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkAddToCartButtonTest">
+                  </a> <!-- checkAddToCartButtonTest -->
+                  <span class="method-name">checkAddToCartButtonTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkAddToCartButtonTest">
+                  </a> <!-- checkAddToCartButtonTest -->
+                  <span class="method-name">checkAddToCartButtonTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkInventoryItemTest">
+                  </a> <!-- checkInventoryItemTest -->
+                  <span class="method-name">checkInventoryItemTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkInventoryItemTest">
+                  </a> <!-- checkInventoryItemTest -->
+                  <span class="method-name">checkInventoryItemTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Test_automtion_regression_suite-class-passed -->
         </div> <!-- panel Test_automtion_regression_suite -->
         <div panel-name="test-xml-Test_automtion_regression_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -111,11 +241,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(0);
+data.addRows(4);
+data.setCell(0, 0, 0)
+data.setCell(0, 1, 'checkInventoryItemTest')
+data.setCell(0, 2, 'com.mydemo.SauceTestUpdated')
+data.setCell(0, 3, 7375);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'checkAddToCartButtonTest')
+data.setCell(1, 2, 'com.mydemo.SauceTestUpdated')
+data.setCell(1, 3, 3634);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'checkAddToCartButtonTest')
+data.setCell(2, 2, 'com.mydemo.SauceTestUpdated')
+data.setCell(2, 3, 2535);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'checkInventoryItemTest')
+data.setCell(3, 2, 'com.mydemo.SauceTestUpdated')
+data.setCell(3, 3, 2252);
 window.suiteTableData['Test_automtion_regression_suite']= { tableData: data, tableDiv: 'times-div-Test_automtion_regression_suite'}
 return data;
 }
               </script>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Test_automtion_regression_suite">
               </div> <!-- times-div-Test_automtion_regression_suite -->
             </div> <!-- times-div -->
@@ -143,9 +290,61 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.mydemo.SauceTestUpdated</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
-                <span class="method-name">beforesuite</span>
+                <span class="method-name">fileclear</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp(Firefox, 80.0, Windows, 10, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkInv...)</span>
+                <span class="method-start">37 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp(Chrome, 85.0, OS X, Catalina, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkI...)</span>
+                <span class="method-start">37 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">checkInventoryItemTest</span>
+                <span class="method-start">8177 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown([TestResult name=checkInventoryItemTest_Chrome status=SUCCESS method=SauceTestUpdated.checkInventory...)</span>
+                <span class="method-start">11751 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp(Chrome, 85.0, OS X, Catalina, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkA...)</span>
+                <span class="method-start">14925 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">checkInventoryItemTest</span>
+                <span class="method-start">18095 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">checkAddToCartButtonTest</span>
+                <span class="method-start">19414 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest_Chrome status=SUCCESS method=SauceTestUpdated.checkAddToCa...)</span>
+                <span class="method-start">23364 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown([TestResult name=checkInventoryItemTest_Firefox status=SUCCESS method=SauceTestUpdated.checkInventor...)</span>
+                <span class="method-start">28806 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp(Firefox, 80.0, Windows, 10, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkAdd...)</span>
+                <span class="method-start">31555 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">checkAddToCartButtonTest</span>
+                <span class="method-start">43561 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest_Firefox status=SUCCESS method=SauceTestUpdated.checkAddToC...)</span>
+                <span class="method-start">49410 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-suite after">
+                <span class="method-name">fileemail</span>
+                <span class="method-start">52275 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
