--- a/test-output/old/Test automtion regression suite/methods-alphabetical.html
+++ b/test-output/old/Test automtion regression suite/methods-alphabetical.html
@@ -1,6 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test automtion regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3b1b4">  <td>21/06/01 16:20:22</td>   <td>0</td> <td title="&gt;&gt;SauceTestUpdated.beforesuite()[pri:0, instance:com.mydemo.SauceTestUpdated@264f218]">&gt;&gt;beforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261198850</td>   <td></td> </tr>
+<tr bgcolor="a0be71">  <td>21/06/01 17:56:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkAddToCartButtonTest()[pri:2, instance:com.mydemo.SauceTestUpdated@7d9f158f]">checkAddToCartButtonTest</td> 
+  <td>TestNG-tests-2@308631489</td>   <td></td> </tr>
+<tr bgcolor="a0be71">  <td>21/06/01 17:56:49</td>   <td>24147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkAddToCartButtonTest()[pri:2, instance:com.mydemo.SauceTestUpdated@6d5620ce]">checkAddToCartButtonTest</td> 
+  <td>TestNG-tests-1@800396765</td>   <td></td> </tr>
+<tr bgcolor="a0be71">  <td>21/06/01 17:56:13</td>   <td>-11237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkInventoryItemTest()[pri:1, instance:com.mydemo.SauceTestUpdated@7d9f158f]">checkInventoryItemTest</td> 
+  <td>TestNG-tests-2@308631489</td>   <td></td> </tr>
+<tr bgcolor="a0be71">  <td>21/06/01 17:56:23</td>   <td>-1319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkInventoryItemTest()[pri:1, instance:com.mydemo.SauceTestUpdated@6d5620ce]">checkInventoryItemTest</td> 
+  <td>TestNG-tests-1@800396765</td>   <td></td> </tr>
+<tr bgcolor="cf92e3">  <td>21/06/01 17:56:05</td>   <td>-19408</td> <td title="&gt;&gt;BaseTestUpdated.fileclear()[pri:0, instance:com.mydemo.SauceTestUpdated@7d9f158f]">&gt;&gt;fileclear</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="cf92e3">  <td>21/06/01 17:56:57</td>   <td>32862</td> <td title="&lt;&lt;BaseTestUpdated.fileemail()[pri:0, instance:com.mydemo.SauceTestUpdated@7d9f158f]">&lt;&lt;fileemail</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="cf92e3">  <td>21/06/01 17:56:05</td>   <td>-19373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@6d5620ce]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@800396765</td>   <td></td> </tr>
+<tr bgcolor="cf92e3">  <td>21/06/01 17:56:05</td>   <td>-19373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@7d9f158f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@308631489</td>   <td></td> </tr>
+<tr bgcolor="cf92e3">  <td>21/06/01 17:56:20</td>   <td>-4487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@7d9f158f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@308631489</td>   <td></td> </tr>
+<tr bgcolor="cf92e3">  <td>21/06/01 17:56:37</td>   <td>12142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@6d5620ce]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@800396765</td>   <td></td> </tr>
+<tr bgcolor="cf92e3">  <td>21/06/01 17:56:17</td>   <td>-7662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@7d9f158f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@308631489</td>   <td></td> </tr>
+<tr bgcolor="cf92e3">  <td>21/06/01 17:56:28</td>   <td>3951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@7d9f158f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@308631489</td>   <td></td> </tr>
+<tr bgcolor="cf92e3">  <td>21/06/01 17:56:34</td>   <td>9393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@6d5620ce]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@800396765</td>   <td></td> </tr>
+<tr bgcolor="cf92e3">  <td>21/06/01 17:56:55</td>   <td>29996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@6d5620ce]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@800396765</td>   <td></td> </tr>
 </table>
